# server-v1

./: .gitignore  Cargo.toml  README.md  openapi.yaml
.github/workflows/: build.yaml
src/lib/: lib.rs
src/lib/api/: mod.rs
src/lib/api/handlers/: health.rs  message.rs  mod.rs  room.rs
src/lib/api/shapes/: README.md  error.rs  messages.rs  mod.rs  rooms.rs  users.rs
src/lib/handlers/: health.rs  room.rs
src/lib/models/: message.rs  mod.rs  room.rs  user.rs
src/lib/services/: chat.rs
