[package]
name = "server-v1"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "chat_ez"
path = "src/lib/lib.rs"

[dependencies]
tracing-appender = "0.2.4"
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
# Tower and HTTP server framework
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = { version="0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"]}
